Add OptOut button to sample

--- a/sample/NearForms/NearFormsPage.xaml
+++ b/sample/NearForms/NearFormsPage.xaml
@@ -1,4 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:local="clr-namespace:NearForms" x:Class="NearForms.NearFormsPage">
-	<Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+    <StackLayout>
+
+        <Label x:Name="ProfileLabel"
+               Text="A simple Label"
+               Font="Large"
+               HorizontalOptions="Center"
+               VerticalOptions="CenterAndExpand" />
+
+        <Button Text="Click Me!"
+                HorizontalOptions="Center"
+                VerticalOptions="CenterAndExpand" 
+                Clicked="OptOut"/>
+        
+    </StackLayout>
 </ContentPage>
